src/objects/DD_Serial_Parts_Management__c.object
<CustomObject>
    <description>**** Demo Depot application****** 
This will store Serial parts</description>
    <fields>
        <fullName>Bin_Location__c</fullName>
        <label>Bin Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demo_Pool__c</fullName>
        <label>Demo Pool</label>
        <referenceTo>DD_Demo_Pool__c</referenceTo>
        <relationshipLabel>Serial Parts Management</relationshipLabel>
        <relationshipName>Serial_Parts_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlagSerializedButton__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will be used to identify that csv has been uploaded from Serialized button from demo Pool.</description>
        <label>FlagSerializedButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>STATUS__c</fullName>
        <label>Product Status</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serialnumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Serial #</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Serial Parts Management</label>
    <nameField>
        <label>Demo - Serial Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Serial Parts Management</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DD_Validation_to_change_the_demo_Pool</fullName>
        <active>true</active>
        <description>it will prevent to change the demo pool for serialized product when it has been used in other
demo pool using Serialized button.</description>
        <errorConditionFormula>AND(FlagSerializedButton__c=true, ISCHANGED( Demo_Pool__c))</errorConditionFormula>
        <errorMessage>This serial number is already used in other demo pool.</errorMessage>
    </validationRules>
</CustomObject>